--- a/curso-jsf-e-primefaces-essencial/src/main/webapp/WEB-INF/template/Layout.xhtml
+++ b/curso-jsf-e-primefaces-essencial/src/main/webapp/WEB-INF/template/Layout.xhtml
@@ -45,5 +45,19 @@ ele o INSERT serve para especificar para as paginas onde sera renderiado o conte
 	<footer>
 		Curso online "JSF e PrimeFaces Essencial"
 	</footer>
+	
+	<h:form>
+	
+	<p:confirmDialog global="true">
+		<p:commandButton value="Não" icon="fa fa-remove" 
+			styleClass="ui-confirmdialog-no"/>
+			
+		<p:commandButton value="Sim" icon="fa fa-check" 
+			styleClass="ui-confirmdialog-yes"/>
+			
+	</p:confirmDialog>
+		
+	</h:form>
+	
 </h:body>
 </html>
